--- a/Amazon-Selenium/Jenkinsfile
+++ b/Amazon-Selenium/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     stage('Test') {
       steps {
         echo 'Testing....'
-        sh 'mvn test -B'
+        sh 'mvn -f Amazon-Selenium/pom.xml test -B'
       }
     }
   }
