--- a/Amazon-Selenium/pom.xml
+++ b/Amazon-Selenium/pom.xml
@@ -21,6 +21,11 @@
             <version>4.0.0-alpha-7</version>
         </dependency>
         <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.0.0-alpha-7</version>
+        </dependency>
+        <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>5.1.0</version>
