--- a/Amazon-Selenium/Jenkinsfile
+++ b/Amazon-Selenium/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     stage('Build') {
       steps {
         echo 'Building...'
-        sh 'mvn clean package -DskipTests'
+        sh 'mvn -f Amazon-Selenium/ clean package -DskipTests'
         archiveArtifacts artifacts: '**/target/*.jar'
       }
     }
@@ -13,7 +13,7 @@ pipeline {
     stage('Test') {
       steps {
         echo 'Testing....'
-        sh 'mvn test -B'
+        sh 'mvn -f Amazon-Selenium/ test -B'
       }
     }
   }
